# SchedulEase

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile  launcher.py  main.py  pyproject.toml
cli/: base_view.py  main.py  query.py  reserve.py  schedule_view.py  utils.py
common/: config.py  exceptions.py
core/: eamis_service.py  exceptions.py  libic_service.py
eamis/: service.py  utils.py
eamis/tui/: config_view.py  election_view.py  main.py  main_view.py  schedule_view.py
libic/: service.py
libic/cli/: main.py  query.py  reserve.py  utils.py
python/: cli.py  config.py  launcher.py  main.py  pyproject.toml  service.py  shared.py
python/cli/: base_view.py  config_view.py  election_view.py  main_view.py  schedule_view.py
python/tests/: dummy_service.py
reference/: bisect_test.py  eamis_api.ipynb
rust/examples/: test_config.rs  test_service.rs
rust/src/: config.rs  main.rs  service.rs
tests/: dummy_service.py  test_data.json
tui/: base_view.py  config_view.py  election_view.py  main.py  main_view.py  schedule_view.py
utils/: config.py  shared.py
