[package]
name = "SchedulEase"
version = "0.1.0"
edition = "2021"

[lib]
name = "schedulease"
path = "rust/src/lib.rs"

[[bin]]
name = "SchedulEase"
path = "rust/src/main.rs"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
cbc = "0.1.2"
digest = "0.10.7"
hex = "0.4.3"
md5 = "0.8.0"
once_cell = "1.21.3"
polars = "0.49.1"
reqwest = { version = "0.12.22", features = ["blocking", "cookies", "json"] }
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.142"
sha-1 = "0.10.1"
thiserror = "2.0.12"
toml = "0.9.4"

[[example]]
name = "test_service"
path = "rust/examples/test_service.rs"

[[example]]
name = "test_config"
path = "rust/examples/test_config.rs"
