[project]
name = "schedulease"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "hjson>=3.1.0",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
    "pathlib>=1.0.1",
    "polars>=1.31.0",
    "prompt-toolkit>=3.0.51",
    "pycryptodome>=3.23.0",
    "rich>=14.0.0",
    "schedule>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "nuitka>=2.7.13",
]

[tool.setuptools]
package-dir = { "schedulease" = "python" }

[project.scripts]
schedulease = "schedulease.main:main"
