[project]
name = "schedulease"
version = "0.1.0"
description = "A TUI program for scheduling course elections in NKU"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "hjson>=3.1.0",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
    "pathlib>=1.0.1",
    "playwright>=1.58.0",
    "polars>=1.31.0",
    "prompt-toolkit>=3.0.51",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.5",
    "rich>=14.0.0",
    "schedule>=1.2.2",
    "typer>=0.24.1",
]

[project.optional-dependencies]
dev = ["jupyter>=1.1.1", "nuitka>=2.7.13"]

[tool.setuptools]
package-dir = { "schedulease" = "." }

[project.scripts]
schedulease = "schedulease.main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
